[package]
name = "DAG"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
base64 = "0.22.1"
bincode = "1.3.3"
blake2 = "0.10.6"
blake2b_simd = "1.0.2"
blst = { version = "0.3.13", features = ["serde"] }
chrono = "0.4.39"
clap = { version = "4.5.22", features = ["derive", "env"] }
ctrlc = "3.4.5"
env_logger = "0.11.6"
generic-array = "1.1.1"
hex = "0.4.3"
libp2p = "0.54.1"
log = "0.4.22"
numtoa = "0.2.4"
rand = "0.8.5"
rust-faker = "0.1.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
sha256 = "1.5.0"
tcp-stream = "0.29.2"
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0" , features = ["v4", "serde"] }
